tests/iperf/isilon_10G/tcp_0/outgoing_results.txt
zephram-1# iperf -s              
------------------------------------------------------------
Server listening on TCP port 5001
TCP window size:   128 KByte (default)
------------------------------------------------------------
[  4] local 7.7.7.2 port 5001 connected with 7.7.7.3 port 37491
[ ID] Interval       Transfer     Bandwidth
[  4]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec
^C#
zephram-1# 



───────────────â────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh iperf
^C
10.9 12.2 14.4 15.5 17.7 17.8 19.7 20.0 22.4 22.7 24.5 24.2 26.8 26.4 28.9 28.4
30.5 30.1 32.0 31.3 33.9 33.0 35.5 34.4 36.5 34.9 37.2 39.6 38.7 37.3 39.7 38.1
40.8 39.0 41.1 39.7 42.2 40.5 43.1 40.8 42.8 45.2 42.9 45.5 43.6 45.6 43.8 46.7
44.5 46.7 44.9 47.5 45.6 47.8 45.5 47.8 45.9 48.2 46.0 47.7 45.4 47.7 45.3 47.6
45.6 48.0 45.7 47.6 45.7 48.4 46.4 48.5 46.3 48.3 46.0 48.9 46.6 48.8 47.2 50.0
47.8 50.1 48.0 51.1 48.2 50.7 48.4 50.2 47.5 49.6 47.4 50.3 48.1 51.3 48.9 51.3
48.9 51.1 48.9 51.5 49.0 51.2 48.3 50.9 48.2 50.6 47.9 50.2 47.7 50.2 47.5
average: 41.5459
zephram-1# 







â───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.0
[ipfwd] starting
current:  9.229%, error:  9.2%, probability:  0.000%
current:  9.485%, error:  9.0%, probability:  0.000%
current:  9.723%, error:  0.2%, probability:  0.000%
current:  9.943%, error:  0.2%, probability:  0.000%
current:  11.145%, error:  1.2%, probability:  0.000%
current:  12.250%, error:  1.1%, probability:  0.000%
current:  11.267%, error:  1.0%, probability:  0.000%
current:  10.364%, error:  0.9%, probability:  0.000%
current:  12.537%, error:  2.2%, probability:  0.000%
current:  12.531%, error:  0.0%, probability:  0.000%
current:  13.525%, error:  1.0%, probability:  0.000%
current:  14.441%, error:  0.9%, probability:  0.000%
current:  13.281%, error:  1.2%, probability:  0.000%
current:  13.214%, error:  0.1%, probability:  0.000%
^C
zephram-2# 


────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# iperf -c 7.7.7.2 -t 60
------------------------------------------------------------
Client connecting to 7.7.7.2, TCP port 5001
TCP window size:   129 KByte (default)
------------------------------------------------------------
[  3] local 7.7.7.3 port 37491 connected with 7.7.7.2 port 5001
[ ID] Interval       Transfer     Bandwidth
[  3]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec
zephram-2# 












────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh iperf
^C
10.2 12.3 15.1 16.9 20.3 21.6 24.9 26.0 29.5 29.9 33.8 33.8 37.0 36.9 40.2 40.0
43.4 42.3 45.3 44.5 48.0 46.4 49.9 48.5 51.7 50.2 53.5 51.6 54.6 52.5 55.9 53.4
56.9 60.2 57.6 61.0 58.4 61.9 59.5 62.7 59.9 62.9 60.3 63.5 60.8 63.9 61.3 64.5
61.7 64.2 61.6 65.1 62.3 65.3 62.2 65.8 62.9 65.7 62.5 65.7 68.7 65.8 69.0 65.9
69.0 65.5 68.5 65.4 68.2 65.3 68.5 65.1 68.3 65.3 68.7 65.3 68.6 65.2 68.8 65.7
68.9 66.0 69.2 66.0 69.2 65.9 69.3 66.4 69.7 66.4 69.4 66.1 69.2 65.9 69.3 65.9
69.3 66.0 69.2 66.0 69.5 66.4 69.7 65.8 68.8 65.7 68.8 72.2 68.7 71.5 68.0 71.2
67.9
average: 57.9531
zephram-2# 

